One can now select bones and map them one by one and then save the mapping as a xml file

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,10 +31,18 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.guava-12.0.jar=lib/guava-12.0.jar
+file.reference.Lemur.jar=lib/Lemur.jar
+file.reference.slf4j-api-1.7.5.jar=lib/slf4j-api-1.7.5.jar
+file.reference.slf4j-simple-1.7.5.jar=lib/slf4j-simple-1.7.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.latestJME3.classpath}
+    ${file.reference.Lemur.jar}:\
+    ${libs.latestJME3.classpath}:\
+    ${file.reference.guava-12.0.jar}:\
+    ${file.reference.slf4j-api-1.7.5.jar}:\
+    ${file.reference.slf4j-simple-1.7.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
