port to JME 3.1 with Lemur 1.10.1

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,24 +32,28 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.guava-12.0.jar=lib/guava-12.0.jar
-file.reference.Lemur.jar=lib/Lemur.jar
+file.reference.lemur-1.10.1.jar=lib/lemur-1.10.1.jar
 file.reference.slf4j-api-1.7.5.jar=lib/slf4j-api-1.7.5.jar
 file.reference.slf4j-simple-1.7.5.jar=lib/slf4j-simple-1.7.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Lemur.jar}:\
-    ${libs.latestJME3.classpath}:\
     ${file.reference.guava-12.0.jar}:\
+    ${file.reference.lemur-1.10.1.jar}:\
+    ${libs.jme3-core.classpath}:\
+    ${libs.jme3-desktop.classpath}:\
+    ${libs.jme3-lwjgl.classpath}:\
+    ${libs.jme3-plugins.classpath}:\
     ${file.reference.slf4j-api-1.7.5.jar}:\
     ${file.reference.slf4j-simple-1.7.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -65,6 +69,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jme.project.version=3.1
 jnlp.codebase.type=local
 jnlp.descriptor=application
 jnlp.enabled=false
